err.log
In file included from ./src/server.c:1:0:
./include/base.h:56:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/server.c:1:0:
./include/base.h:189:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/server.c:1:0:
./include/base.h:190:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/server.c: In function 'do_exit':
./src/server.c:18:5: warning: implicit declaration of function 'destroy_socket' [-Wimplicit-function-declaration]
     destroy_socket();
     ^~~~~~~~~~~~~~
./src/server.c: In function 'send_pipe':
./src/server.c:26:5: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
     set_request_head(buf, 0x0, cmd, size);
     ^~~~~~~~~~~~~~~~
./src/server.c: In function 'recv_done':
./src/server.c:35:13: warning: unused variable 'ret' [-Wunused-variable]
         int ret, code;
             ^~~
./src/server.c: In function 'recv_ready':
./src/server.c:73:13: warning: unused variable 'ret' [-Wunused-variable]
         int ret, code;
             ^~~
./src/server.c: In function 'send_login':
./src/server.c:197:5: warning: implicit declaration of function 'get_version' [-Wimplicit-function-declaration]
     get_version(&server_major, &server_minor);
     ^~~~~~~~~~~
./src/server.c:198:13: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
     sprintf(req->data_buf, VERSIONFORMAT, server_major, server_minor);
             ^~~
In file included from ./include/base.h:4:0,
                 from ./src/server.c:1:
c:\program files\git\mingw32\include\stdio.h:455:38: note: expected 'char *' but argument is of type 'unsigned char *'
 _CRTIMP __cdecl __MINGW_NOTHROW  int sprintf (char *, const char *, ...);
                                      ^~~~~~~
./src/server.c: In function 'start_control':
./src/server.c:285:38: warning: implicit declaration of function 'creat_udp' [-Wimplicit-function-declaration]
  control_display->req->control_udp = creat_udp(control_display->req->ip, control_port);
                                      ^~~~~~~~~
./src/server.c:285:36: error: incompatible types when assigning to type 'struct sock_udp' from type 'int'
  control_display->req->control_udp = creat_udp(control_display->req->ip, control_port);
                                    ^
./src/server.c: In function 'init_server':
./src/server.c:355:8: warning: implicit declaration of function 'bind_socket' [-Wimplicit-function-declaration]
     if(bind_socket(server_s, client_port) == -1)
        ^~~~~~~~~~~
./src/server.c:361:11: warning: implicit declaration of function 'create_display' [-Wimplicit-function-declaration]
     ret = create_display();
           ^~~~~~~~~~~~~~
./src/server.c:368:11: warning: implicit declaration of function 'init_display' [-Wimplicit-function-declaration]
     ret = init_display();
           ^~~~~~~~~~~~
./src/server.c:389:5: warning: implicit declaration of function 'sdl_loop' [-Wimplicit-function-declaration]
     sdl_loop();
     ^~~~~~~~
./src/server.c:392:5: warning: implicit declaration of function 'close_fd' [-Wimplicit-function-declaration]
     close_fd(server_s);
     ^~~~~~~~
./src/server.c: In function 'start_display':
./src/server.c:251:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
./src/server.c: In function 'stop_display':
./src/server.c:273:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
./src/server.c: In function 'start_control':
./src/server.c:295:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
./src/server.c: In function 'stop_control':
./src/server.c:309:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [server.o] Error 1
